Align adjective generation rules
